[FIX] JWT 코드 수정